<resources>
    <string name="app_name">DetoxSocial</string>
    <string name="app_name_2">Detox Social</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_header">Detox Social</string>
    <string name="welcome_catchphrase">Let\'s remove negativity from social media!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remeber_me">Remeber Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="search_something">Search something ...</string>
    <string name="full_name">Full Name</string>
    <string name="post">POST</string>
    <string name="caption">Caption</string>
    <string name="comment_placeholder">Add a comment ...</string>
</resources>