<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".WelcomeActivity"
    android:background="@drawable/bg_welcome"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/welcome_header"
            android:textColor="@color/text"
            android:textSize="55sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/ubuntu_regular"
            android:gravity="center"
            android:text="@string/welcome_catchphrase"
            android:textColor="@color/secondary_text"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_rounded"
                android:fontFamily="@font/lato_bold"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:onClick="openLoginScreen"/>

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_rounded_white"
                android:fontFamily="@font/lato_bold"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:onClick="openSignUpScreen"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>