<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_welcome"
    android:padding="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/loginBackButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="5dp"
            android:src="@drawable/back"
            app:tint="@color/white"
            android:onClick="openWelcomeScreen"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/register"
            android:textColor="@color/text"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/username"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                android:textColorHint="@color/secondary_text"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/user"
                app:startIconTint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:theme="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/secondary_text"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    app:hintTextColor="@color/white"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/secondary_text"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/lock"
                app:startIconTint="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/lato_regular"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    app:hintTextColor="@color/white"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/remeber_me"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:background="#00000000"
                    android:textColor="@color/white"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>

            <Button
                android:id="@+id/loginScreen_login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/sign_up"
                android:textSize="20sp"
                android:padding="5dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/btn_rounded"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:onClick="openDashboard"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="60dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:textSize="15sp"
                    android:textColor="@color/text"
                    android:text="Don't have an account ? "
                    tools:ignore="HardcodedText" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:background="#00000000"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textColor="@color/text"
                    android:onClick="openLogin"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>